--- a/package.json
+++ b/package.json
@@ -4,27 +4,40 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
-    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "jasmine-ts",
+    "build": "npx tsc",
+    "start": "nodemon src/server.ts",
+    "watch": "set NODE_ENV=dev tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
+    "test": "db-migrate up -e dev && npx tsc && jasmine && db-migrate down -e dev",
+    "jasmine": "jasmine",
     "tsc": "tsc"
   },
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
-    "typescript": "^4.1.3",
-    "pg": "^8.5.1"
+    "db-migrate": "^0.11.12",
+    "db-migrate-pg": "^1.5.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-pg-migrate": "^6.2.2",
+    "nodemon": "^3.0.2",
+    "pg": "^8.11.3",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/jasmine": "^3.6.3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jasmine": "^3.10.18",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^7.14.7",
-    "jasmine": "^3.6.4",
-    "jasmine-spec-reporter": "^6.0.0",
+    "@types/supertest": "^2.0.16",
+    "jasmine": "^5.1.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "jasmine-ts": "^0.3.0",
-    "ts-node": "^9.1.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^4.2.9"
   }
 }
