--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "nodemon src/server.ts",
-    "watch": "set NODE_ENV=dev tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
-    "test": "db-migrate up -e dev && npx tsc && jasmine && db-migrate down -e dev",
+    "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
+    "test": "set ENV=test&& npx tsc && db-migrate --env test up && jasmine && db-migrate --env test down",
     "jasmine": "jasmine",
     "tsc": "tsc"
   },
