--- a/.env
+++ b/.env
@@ -1,13 +1,10 @@
 TOKEN_SECRET=token
-
 POSTGRES_HOST=localhost
 POSTGRES_DB=plant_dev
 POSTGRES_USER=udacity
 POSTGRES_PASSWORD=udacity
 POSTGRES_PORT=5432
-
-# TEST_POSTGRES_HOST=localhost
-# TEST_POSTGRES_DB=plant_dev
-# TEST_POSTGRES_USER=udacity
-# TEST_POSTGRES_PASSWORD=udacity
-# TEST_POSTGRES_PORT=5432
+POSTGRES_DB_TEST=plant_test
+POSTGRES_PORT_TEST=5432
+BCRYPT_PW=hash
+SALT_ROUNDS=10
